--- a/title.html
+++ b/title.html
@@ -1,1 +1,1 @@
-<div>Predicting Snow:&nbsp;</div>
+<div>Predicting Snow: How do Statistical Snow Distribution Models Vary Over Space and Time?</div>
