--- a/14eb2.html
+++ b/14eb2.html
@@ -1,1 +1,1 @@
-<div>Data Preprocessing</div><div>Data preprocessing consisted of several steps:</div><div>Data preprocessing consisted of several steps:</div>
+<div></div>
