--- a/figures/tuolumneLocation/caption.html
+++ b/figures/tuolumneLocation/caption.html
@@ -1,1 +1,1 @@
-<div data-label="961135">Location of the study site, the Tuolumne River Basin, in the&nbsp;</div>
+<div data-label="961135">Location of the study site, the Tuolumne River Basin, in the Central Sierra</div>
