--- a/figures/snowoff_rasters/caption.html
+++ b/figures/snowoff_rasters/caption.html
@@ -1,1 +1,1 @@
-<div data-label="632426">Renderings of the four snowoff raster datasets(a) Land surface classification</div>
+<div data-label="632426">Renderings of the four snowoff raster datasets: (a) Land surface classification, (</div>
