--- a/figures/snowoff_rasters/caption.html
+++ b/figures/snowoff_rasters/caption.html
@@ -1,1 +1,1 @@
-<div data-label="632426">Renderings of the four snowoff raster datasets: (a) Land surface classification, (b) Canopy density, (c) Canopy height, and (d)&nbsp;</div>
+<div data-label="632426">Renderings of the four snowoff raster datasets: (a) Land surface classification, (b) Canopy density, (c) Canopy height, and (d) Elevation.</div>
