--- a/figures/snowoff_rasters1/caption.html
+++ b/figures/snowoff_rasters1/caption.html
@@ -1,1 +1,1 @@
-<div data-label="998564">This is a caption</div>
+<div data-label="998564">Renderings of the four snowoff raster datasets: (a) Land surface classification, (b) Canopy density, (c) Canopy height, and (d) Elevation.</div>
