--- a/eaa5.html
+++ b/eaa5.html
@@ -1,1 +1,1 @@
-<h2 data-label="725861" class="ltx_title_subsection">Data Preprocessing</h2><div>Data preprocessing consisted of several steps, performed on each raster separately, in parallel:</div>
+<h2 data-label="725861" class="ltx_title_subsection">Data Preprocessing</h2><div>Data preprocessing consisted of several steps, performed on each raster separately and in parallel:</div>
