--- a/14eb2.html
+++ b/14eb2.html
@@ -1,1 +1,1 @@
-<div>For steps one and two, each of the 121 raw raster images (2</div>
+<div>For steps one and two, each of the 121 raw raster images (26 snapsho</div>
