--- a/14eb2.html
+++ b/14eb2.html
@@ -1,1 +1,1 @@
-<div>For steps one and two, each of the 121 raw raster images (13 snapshots of snow depth</div>
+<div>For steps one and two, each of the 121 raw raster images (13 snapshots of snow depth at 3m</div>
