--- a/14eb2.html
+++ b/14eb2.html
@@ -1,1 +1,1 @@
-<div>For steps one and two, each of the 121 raw raster images (39 snapshots of snow depth at 3m, 39 snapshots of snow depth at 50m, 39 snapshots of&nbsp;</div>
+<div>For steps one and two, each of the 121 raw raster images (39 snapshots of snow depth at 3m, 39 snapshots of snow depth at 50m, 39 snapshots of SWE at&nbsp;</div>
